# ChangeLog for dev-libs/libxslt
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.143 2006/10/20 00:27:28 kloeri Exp $

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> libxslt-1.1.17.ebuild:
  Stable on Alpha.

  19 Oct 2006; Roy Marples <uberlord@gentoo.org> libxslt-1.1.17.ebuild:
  Added ~sparc-fbsd keyword.

  03 Sep 2006; Joshua Kinard <kumba@gentoo.org> libxslt-1.1.17.ebuild:
  Marked stable on mips.

  16 Aug 2006; Markus Rothe <corsair@gentoo.org> libxslt-1.1.17.ebuild:
  Stable on ppc64

  17 Jul 2006; Daniel Gryniewicz <dang@gentoo.org> libxslt-1.1.17.ebuild:
  Marked stable on amd64 for bug #139612

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libxslt-1.1.17.ebuild:
  hppa stable, bug #139612

  14 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libxslt-1.1.17.ebuild:
  ppc stable, bug #139612

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> libxslt-1.1.17.ebuild:
  Mark 1.1.17 stable on ia64

  12 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> libxslt-1.1.17.ebuild:
  Stable on x86 wrt bug #139612.

  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org> libxslt-1.1.17.ebuild:
  Stable on sparc wrt #139612

*libxslt-1.1.17 (22 Jun 2006)

  22 Jun 2006; Leonardo Boshell <leonardop@gentoo.org>
  +libxslt-1.1.17.ebuild:
  New release.

*libxslt-1.1.16 (19 May 2006)

  19 May 2006; Leonardo Boshell <leonardop@gentoo.org>
  +files/libxslt-1.1.16-destdir.patch,
  +files/libxslt-1.1.16-pythondir_fix.patch, +libxslt-1.1.16.ebuild:
  New release.

  01 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  libxslt-1.1.15-r1.ebuild:
  Add ~x86-fbsd keyword.

*libxslt-1.1.15-r1 (31 Mar 2006)

  31 Mar 2006; Leonardo Boshell <leonardop@gentoo.org>
  +files/libxslt-1.1.15-pattern_fix.patch, +libxslt-1.1.15-r1.ebuild:
  Patch to fix a segfault with certain xpath statements (bug #106992). Dropped
  'static' USE flag.
