@@ -7,14 +7,19 @@ MD5 a772cd7aafe8f9e0fd59de02b2ea2e85 files/libxslt.m4-libxslt-1.1.8.patch 1292
 RMD160 0dcd21978aa0102784df670f2c9835da227f42c8 files/libxslt.m4-libxslt-1.1.8.patch 1292
 SHA256 0da59fb6cb50bf30e8ac79644df90394707ac07e60337aa3c0e53986781e9e0d files/libxslt.m4-libxslt-1.1.8.patch 1292
 DIST libxslt-1.1.17.tar.bz2 1910630 RMD160 de90b95e5b93df498061d78b85c4ff2a3071d050 SHA1 d9e7c23227664dba7da04f9bbcfbb470f797c6df SHA256 f2ddf1cf7b384f213118bff6403f4465f07e055a52a7bbdadfbe1f67c676de60
+DIST libxslt-1.1.19.tar.gz 2799906 RMD160 ff8dbc7024c66b5f2886e8df2c7ac1bdedb07030 SHA1 74a69c9c8bb4a263a4b9e2a604f7210b34818eaf SHA256 9d57e9da2e8b90f24b8bd44f72607ca7f4f6f79ecb6599067de4098b528c8643
 EBUILD libxslt-1.1.17.ebuild 1812 RMD160 aaeee67ab0750f919baa53782f709988dfd374b6 SHA1 3deff10861054754dac1cfda5a745c99bb7fd544 SHA256 0d6f7f6669b86d43b6e9e19ce6a4d03171acdc4176c5ff7349be64ecfbf61400
 MD5 0d045d121de2d76edf0222750a64d38d libxslt-1.1.17.ebuild 1812
 RMD160 aaeee67ab0750f919baa53782f709988dfd374b6 libxslt-1.1.17.ebuild 1812
 SHA256 0d6f7f6669b86d43b6e9e19ce6a4d03171acdc4176c5ff7349be64ecfbf61400 libxslt-1.1.17.ebuild 1812
-MISC ChangeLog 17016 RMD160 d1fb16a844846d97e0b33f8c1fb9fdeca2f4b8d6 SHA1 f0bceafaa62aa66edfa631cacf566307a0ca1334 SHA256 22ca97cf260fa8a75a12b42f4ce71636fcb7fe6426879784a400d0c7028e4320
-MD5 24e42244a51e0c7fce93cc72017de31e ChangeLog 17016
-RMD160 d1fb16a844846d97e0b33f8c1fb9fdeca2f4b8d6 ChangeLog 17016
-SHA256 22ca97cf260fa8a75a12b42f4ce71636fcb7fe6426879784a400d0c7028e4320 ChangeLog 17016
+EBUILD libxslt-1.1.19.ebuild 1927 RMD160 d5d2727a1fdbcb75ca8de193de9497a19f771bb6 SHA1 a636d5acd635f18fb4dfa0517b8cf84379efccf8 SHA256 3bf2f661a1b1265ff93eba216cd8062dcb3b6a852684013a3520df42eaeff31d
+MD5 f2bab3fa8ca1552923c7df7ac47053eb libxslt-1.1.19.ebuild 1927
+RMD160 d5d2727a1fdbcb75ca8de193de9497a19f771bb6 libxslt-1.1.19.ebuild 1927
+SHA256 3bf2f661a1b1265ff93eba216cd8062dcb3b6a852684013a3520df42eaeff31d libxslt-1.1.19.ebuild 1927
+MISC ChangeLog 17237 RMD160 f6ab36730ee6a83e6130e35c3a320bae4f738230 SHA1 9e30cc75e83fc5a251c00dd37c70e097fd803652 SHA256 11d58a97273f390ebe161c36f0bb34a4e2ded49856992ecf3c9af9202d950f9d
+MD5 c1941b2ad6342210149f5ad29548b83b ChangeLog 17237
+RMD160 f6ab36730ee6a83e6130e35c3a320bae4f738230 ChangeLog 17237
+SHA256 11d58a97273f390ebe161c36f0bb34a4e2ded49856992ecf3c9af9202d950f9d ChangeLog 17237
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e metadata.xml 158
@@ -22,3 +27,6 @@ SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 metadata
 MD5 99caee7d00a40add9290f4b2529a1032 files/digest-libxslt-1.1.17 250
 RMD160 33da9e411cbb7865b91b9921cee8d85a05834e7f files/digest-libxslt-1.1.17 250
 SHA256 bcac935f425e6c21dd66d26f727bbf95a41198c1a7f0f849dbacdf8f4df80f23 files/digest-libxslt-1.1.17 250
+MD5 7f9f0c1e38cb8227c764e4ffc619d13b files/digest-libxslt-1.1.19 247
+RMD160 d21eeb504f4bccf363049bf8dc2ee055baee7834 files/digest-libxslt-1.1.19 247
+SHA256 a2abc9f82f503e0600960cb44200755ddb57125c4d7e0e06493e29bb76772238 files/digest-libxslt-1.1.19 247
