@@ -1,6 +1,14 @@
 # ChangeLog for dev-libs/libxslt
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.143 2006/10/20 00:27:28 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.145 2006/12/21 07:59:45 robbat2 Exp $
+
+  21 Dec 2006; Robin H. Johnson <robbat2@gentoo.org> libxslt-1.1.19.ebuild:
+  Fix libxml DEP.
+
+*libxslt-1.1.19 (21 Dec 2006)
+
+  21 Dec 2006; Robin H. Johnson <robbat2@gentoo.org> +libxslt-1.1.19.ebuild:
+  Version bump.
 
   20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> libxslt-1.1.17.ebuild:
   Stable on Alpha.
